# grok-mccodin

./: .env.example  .gitattributes  .gitignore  CTO_REVIEW.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
grok_mccodin/: __init__.py  __main__.py  client.py  config.py  database.py  docker.py  editor.py  executor.py  git.py  main.py  mcp.py  memory.py  packages.py  rag.py  social.py  utils.py  web.py
tests/: conftest.py  test_client.py  test_config.py  test_database.py  test_docker.py  test_editor.py  test_executor.py  test_git.py  test_mcp.py  test_memory.py  test_packages.py  test_rag.py  test_security.py  test_utils.py  test_web.py
